<resources>
    <string name="app_name">Quick Check</string>
    <string name="forgot_password"><u>Forgot password</u></string>
    <string name="userid">User Id</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="please_enter_your_user_name_below_to_recieve_a_password_reset_link">Please enter your user name below to recieve a password reset link</string>
    <string name="forgot_password_hedding">Forgot Password</string>
    <string name="fill_userid">Fill UserId</string>
    <string name="fill_paswrd">Fill Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change">Change</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="change_password">Change Password</string>
    <string name="this_is_to_confirm_that_declaration_has_been_carefully_read_understood_and_made_by_me_us_i_m_authorizing_the_user_entity_corporate_to_debit_my_accountbased_on_the_instruction_as_agreed_and_signed_by_me_i_ve_understood_that_i_am_authorizing_to_cancel_amend_this_mandate_by_approprieately_communicating_the_cancellation_amendment_request_to_the_user_entity_corporate_or_the_bank_where_i_ve_authorized_the_debit">This is to confirm that declaration has been carefully read,understood and made by me/us.I\'m authorizing the user Entity/Corporate to debit my accountbased on the instruction as agreed and signed by me.I\'ve understood that I am authorizing to cancel /amend this mandate by approprieately communicating the cancellation/amendment request to the user/Entity/ Corporate or the bank where I\'ve authorized the debit.</string>
    <string name="load_more">Load more...</string>
    <string name="account_validate">Account Validate</string>
    <string name="successfull">Successfull</string>
    <string name="bank_live_for_enach_proceed_for">Bank Live For Enach. \n Proceed For:</string>
    <string name="reference_already_exist">Reference Already Exist</string>
    <string name="edit">Edit</string>
    <string name="mandate_form">Mandate form</string>
    <string name="add_new_mandate">Add New Mandate</string>
    <string name="search_record">Search Record</string>
    <string name="to_date">To date</string>
    <string name="from_date">From date</string>
    <string name="nodatafind">No Data Found</string>
    <string name="appbar_scrolling_view_behavior">ds</string>
    <string name="invalid_user">Invalid User!</string>
    <string name="mandate_type">Mandate Type:</string>
    <string name="reference_no">Reference No:</string>
    <string name="creation_date">Creation Date:</string>
    <string name="updation_date">Updation Date:</string>
    <string name="status">Status:</string>
    <string name="update">Update</string>
    <string name="editMandateForm">Edit Mandate Form</string>
    <string name="fillDate">Fill Date</string>
    <string name="success">Success</string>
    <string name="date_of_mandate">Date Of Mandate</string>
    <string name="sponsor_bank">Sponsor Bank</string>
    <string name="utility_code">Utility Code</string>
    <string name="i_we_hereby_authorize">I/We Hereby Authorize</string>
    <string name="bank_a_c_number">Bank A/C Number</string>
    <string name="bank_name">Bank Name</string>
    <string name="quarterly">Quarterly</string>
    <string name="debit_type">Debit Type</string>
    <string name="fixed_amount">Fixed Amount</string>
    <string name="maximum_amount">Maximum Amount</string>
    <string name="reference_1">Reference 1</string>
    <string name="reference_2">Reference 2</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="i_agree_for_the_debit_of_mandate_processing_charges_by_the_bank_whom_i_am_authorizing_to_debit_my_account_as_per_latest_schedule_of_charges_of_bank_period">I agree for the debit of mandate processing charges by the bank whom I am authorizing to debit my account as per latest schedule of charges of bank period.</string>
    <string name="or">Or</string>
    <string name="until_canceled">Until Canceled</string>
    <string name="_1_name_of_primary_acc_holder">1.Name of Primary Acc.Holder</string>
    <string name="_2_name_of_acc_holder">2.Name of Acc.Holder</string>
    <string name="_3_name_of_acc_holder">3.Name of Acc.Holder</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="physical">Physical</string>
    <string name="enach">Enach</string>
    <string name="as_amp_when_presented"><![CDATA[As & When Presented]]></string>
    <string name="no_data_found_try_again">No Data Found \n Try Again</string>
    <string name="cannotEditThisMandate">You Can Not Edit this Mandate Contact.</string>
    <string name="warning">Warning</string>
    <string name="mandateType">Mandate Type</string>
    <string name="pleaseselectmandatetype">Please Select Mandate Type</string>
    <string name="search_bank_name">Search Bank Name</string>
    <string name="todateisMandatory">ToDate Is Mandatory for Enach.</string>
    <string name="to">To:</string>
    <string name="save">Save</string>
    <string name="amoutIsGreater">You cannot Proceed for E-sign because your amount is greater than</string>
    <string name="cannotProceedEsignforjointacc">You Cannot Proceed For E-sign For Joint Account</string>
    <string name="mandate_detail">Mandate Detail</string>
    <string name="consent_forauth">Consent For Authentication</string>
    <string name="please_check_the_box_to_provide_your_consent_to_the_below_option">Please check the box to provide your consent to the below option.</string>
    <string name="by_continuing_">By continuing, I agree to do eKyc using Aadhaar to eSign with one of ESPs (NSDL). Yoeki Soft is registered as ASP.</string>
    <string name="i_do_not_wish_to_authenticate">I do not wish to authenticate myself with the Aadhaar based Authentication system for Authentication of my identity. However, I do understand that if at any time I wish to authenticate myself with the Aadhaar based Authentication system I need to provide consent to Yoeki Soft Private Limited to provide my Aadhaar number, and Authentication Mode (Biometric and/or OTP).</string>
    <string name="authentication_mode">Authentication Mode</string>
    <string name="chooose_authentication_mode">Choose Authentication Mode</string>
    <string name="finger_print">Finger-Print</string>
    <string name="OTP">OTP</string>
    <string name="cancel">Cancel</string>
    <string name="mobileVerification">Mobile Verification</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="validateOtp">Validate OTP</string>
    <string name="voiceOTP">Voice OTP</string>
    <string name="resendOTP">Resend OTP</string>
    <string name="fill_mobile_number">Fill Mobile Number</string>
    <string name="InValidPhoneNumber">Mobile Number Must Be Of 10 Digits</string>
    <string name="proceed">Proceed</string>
    <string name="account_validation">Account Validation</string>
    <string name="bank_live_on_nach">Bank Live On NACH:</string>
    <string name="bank_live_on_Enach">Bank Live On ENACH:</string>
    <string name="amount_enach_max_trx_value"><![CDATA[Amount <= ENACH max. trx value :]]></string>
    <string name="ToDatemandatory">"To Date" mandatory for ENACH:Edit </string>
    <string name="single_signatory">Single Signatory :</string>
    <string name="proceed_with_enach">Are you sure you want to proceed with ENACH</string>
    <string name="proceed_with_physical">Are you sureyou want to proceed with Physical?</string>
    <string name="failure">Failure</string>
    <string name="fillCorrectDate">Select Correct Date</string>
    <string name="no_more_data_found">No More Data Found</string>
    <string name="appid">App Id</string>
    <string name="fillAppId">Fill App Id</string>
    <string name="appidshouldbeof6lenghth">App id should be of 6 digit</string>
    <string name="Gotomainapp">Go To Main App</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

</resources>
