<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundmain">

    <TextView
        android:id="@+id/forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/opensans_light"
        android:gravity="center"
        android:text="@string/forgot_password_hedding"
        android:textColor="@color/backgroundcolor"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/opensans_light"
            android:gravity="center"
            android:text="@string/please_enter_your_user_name_below_to_recieve_a_password_reset_link"
            android:textColor="@color/colorblack" />

        <EditText
            android:id="@+id/edt_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/edittextrounded"
            android:fontFamily="@font/opensans_light"
            android:hint="@string/userid"
            android:padding="10dp"
            android:maxLines="1"
            android:textColor="@color/textcolor"
            android:textColorHint="@color/textcolor" />

        <com.quickcheck.CustomButtonRegular
            android:id="@+id/btn_submitforgot"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@color/buttonColor"
            android:fontFamily="@font/opensans_light"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="#ffffff"
            android:textSize="18dp" />
    </LinearLayout>

</RelativeLayout>