<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundmain"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_bold"
            android:gravity="center"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/edt_oldpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittextrounded"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:padding="7dp"
        android:singleLine="true"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/textcolor"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/edt_oldnewpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittextrounded"
        android:hint="@string/new_password"
        android:inputType="textPassword"

        android:padding="7dp"
        android:singleLine="true"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/textcolor"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/edt_confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittextrounded"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="7dp"
        android:singleLine="true"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/textcolor"
        android:textSize="16dp" />

    <com.quickcheck.CustomButtonRegular
        android:id="@+id/tv_changepassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/buttonColor"
        android:fontFamily="@font/opensans_bold"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="8dp"
        android:text="@string/change"
        android:textColor="@color/white"
        android:textSize="18dp" />
</LinearLayout>