<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundmain"
    android:orientation="vertical"
    tools:context=".AuthenticationModeActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/primary_color_drawable">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:background="@mipmap/quickcheck" />
        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/navigation_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/opensans_light"
                android:gravity="center"
                android:text="@string/account_validate"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp" />
        </LinearLayout>


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/consent_drawable"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/rl_header">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_bold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/authentication_mode"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@mipmap/touch_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/chooose_authentication_mode"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                android:text="@string/OTP"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/radioButtonFingerPrint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:buttonTint="@color/black"
                android:text="@string/finger_print"
                android:textColor="@color/black" />


        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <com.quickcheck.CustomButtonRegular
                android:id="@+id/buttonsubmit"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:background="@drawable/button_ripple_effect"
                android:fontFamily="@font/opensans_light"
                android:onClick="onSubmitButtonClick"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="14dp" />

            <com.quickcheck.CustomButtonRegular
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginStart="20dp"
                android:background="@drawable/button_ripple_effect"
                android:fontFamily="@font/opensans_light"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:onClick="onCancelButtonClick"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="14dp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>