<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundmain"
    tools:context=".LoginActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_logoimage"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:background="@mipmap/quickcheck_blue"
            android:scaleType="fitXY" />

        <EditText
            android:id="@+id/edtAppId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edittextrounded"
            android:fontFamily="@font/opensans_light"
            android:hint="@string/appid"
            android:inputType="number"
            android:maxLength="6"
            android:nextFocusDown="@id/edt_password"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/textcolor"
            android:textColorHint="@color/textcolor"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/edt_userid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edittextrounded"
            android:fontFamily="@font/opensans_light"
            android:hint="@string/userid"
            android:nextFocusDown="@id/edt_password"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/textcolor"
            android:textColorHint="@color/textcolor"
            android:textSize="16dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edittextrounded"
            android:orientation="horizontal"
            android:weightSum="1.25">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.20"
                android:background="@drawable/edittextrounded"
                android:drawablePadding="10dp"
                android:fontFamily="@font/opensans_light"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:nextFocusDown="@id/tv_textsubmit"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/textcolor"
                android:textSize="16dp" />

            <ImageView
                android:id="@+id/imageView_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>

        <com.quickcheck.CustomButtonRegular
            android:id="@+id/tv_textsubmit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/button_ripple_effect"
            android:fontFamily="@font/opensans_light"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="#ffffff"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/tv_textforgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/opensans_light"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="#111111"
            android:textSize="17dp" />
    </LinearLayout>


</RelativeLayout>