<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundmain"
    android:orientation="vertical"
    tools:context=".OTPScreenActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/primary_color_drawable">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:background="@mipmap/quickcheck" />
        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/navigation_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/opensans_light"
                android:gravity="center"
                android:text="@string/account_validate"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp" />
        </LinearLayout>


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/consent_drawable"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_bold"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:text="@string/mobileVerification"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_light"
            android:gravity="center"
            android:paddingEnd="35dp"
            android:paddingStart="35dp"
            android:text="We have sent you access code via sms for Mobile No. verification"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@mipmap/mobile" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="@string/OTP"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <com.quickcheck.model.PinView
            android:id="@+id/firstPinView"
            style="@style/Pin.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:hint=""
            android:inputType="number"
            android:itemBackground="@drawable/dark_edittetxt_selector"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="18sp"
           />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="40dp"
            android:paddingStart="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@android:color/transparent"
                android:fontFamily="@font/opensans_light"
                android:onClick="onResendButtonClick"
                android:text="@string/resendOTP"
                android:textColor="#0788FF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginStart="20dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/opensans_light"
                android:onClick="onVoiceOTPButtonClick"
                android:text="@string/voiceOTP"
                android:textColor="#0788FF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <com.quickcheck.CustomButtonRegular
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:background="@drawable/button_ripple_effect"
                android:fontFamily="@font/opensans_light"
                android:onClick="onValidateOtpButtonClick"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/validateOtp"
                android:textColor="@color/white"
                android:textSize="14dp" />

            <com.quickcheck.CustomButtonRegular
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginStart="20dp"
                android:background="@drawable/button_ripple_effect"
                android:fontFamily="@font/opensans_light"
                android:onClick="onCancelButtonClick"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="14dp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>