<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundmain">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:drawableRight="@mipmap/close"
            android:fontFamily="@font/opensans_light"
            android:gravity="left|center"
            android:padding="5dp"
            android:text="@string/todateisMandatory"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/to"
                android:textColor="@color/textcolor"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/textViewToDate"
                style="@android:style/Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/edittextrounded"
                android:fontFamily="@font/opensans_light"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/textcolor"
                android:textSize="16dp" />

        </LinearLayout>

        <com.quickcheck.CustomButtonRegular
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_margin="10dp"
            android:background="@drawable/button_ripple_effect"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="16dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>